# RDT-toolbox

./: CITATION.cff  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: INDEX.md  dual_number_extension_plan.md  papers_and_zenodo.md  plugin_integrations.md  prng_noise_indexing_overview.md  rdt_index_benchmark.md  rdt_math_cs_spec.md  rdt_showcase_report.md  release_draft_v0.1.0.md  reproducibility.md  verification_matrix.md
results/: rdt_index_benchmark.json  showcase_summary.json
src/rdt_showcase/: __init__.py  baselines.py  dual.py  dual_tuning.py  plugins.py  rdt_index.py
tests/: test_dual_tools.py  test_plugins.py  test_rdt_index.py
tools/: benchmark_rdt_index.py  run_showcase.py  run_tests.py
